--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,11 +9,9 @@ layout: default
         <time datetime="{{ post.date }}" class="catalogue-time">{{ post.date | date: "%B %d, %Y" }}</time>
         <h1 class="catalogue-title">{{ post.title }}</h1>
         <div class="catalogue-line"></div>
-
         <p>
-          {{ post.content | strip_html | truncatewords: 30 }}
+          {{ post.excerpt | strip_html }}
         </p>
-
       </div>
     </a>
   {% endfor %}
