--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<link rel="stylesheet" href="/assets/css/syntax.css">
 <div class="post">
   <div class="post-info">
     <span>Written by</span>
